Start game button on landing page is functional and redirects users to the Difficulty-level-page

--- a/landing-page.html
+++ b/landing-page.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuizMe 2.0</title>
     <link rel="stylesheet" href="./landing-page-style.css">
+    <script defer src="./app.js"></script>
+
 </head>
 <body>
+    
     <header>
         <h1>QuizMe 2.0 : A TRIVIA GAME </h1>
     </header>
     <main>
         <section class="intro">
-            <h2>TEST YOUR HTML CSS JAVASCRIPT KNOWLEDGE</h2>
-            <p></p>
+            <button id="start-game-button">TEST YOUR HTML CSS JAVASCRIPT KNOWLEDGE</button>
         </section>
         
     </main>
