--- a/Difficulty-level-page.html
+++ b/Difficulty-level-page.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuizMe 2.0</title>
     <link rel="stylesheet" href="./style.css">
+    <script defer src="./app.js"></script>
 </head>
 <body>
     <header>
