Cached easy, medium, difficult button elements in preparation to add event handlers to redirect user to questions page. Created a page for questions and the css style sheet for that page

--- a/Difficulty-level-page.html
+++ b/Difficulty-level-page.html
@@ -18,9 +18,9 @@
         </section>
         <section class="planets">
             
-            <div class="planet earth">Easy</div>
-            <div class="planet mars">Medium</div>
-            <div class="planet jupiter">Difficult</div>
+            <div id="easy-button">Easy</div>
+            <div id="medium-button">Medium</div>
+            <div id="difficult-button">Difficult</div>
         </section>
     </main>
     <footer>
