Question page developed and styled (roughly); difficulty level buttons are linked to be directed to the question page

--- a/questions.html
+++ b/questions.html
@@ -6,9 +6,11 @@
     <title>QuizMe 2.0</title>
     <link rel="stylesheet" href="./questions-style.css">
     <script defer src="./app.js"></script>
-
+    <script defer src="./data.js"></script>
 </head>
 <body>
-    
+    <header>
+        <h1>This is where the questions will appear; the actual gameplay will take place on this page</h1>
+    </header>
 </body>
 </html>
