--- a/questions.html
+++ b/questions.html
@@ -12,5 +12,7 @@
     <header>
         <h1>This is where the questions will appear; the actual gameplay will take place on this page</h1>
     </header>
+<div></div>
+    
 </body>
 </html>
