Pseudo code for actual gameplay of picking answers

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <section class="intro">
-            <button id="start-game-button">TEST YOUR HTML CSS JAVASCRIPT KNOWLEDGE</button>
+            <button id="start-game-button">START</button>
         </section>
         
     </main>
