--- a/questions.html
+++ b/questions.html
@@ -12,7 +12,8 @@
     <header>
         <h1>This is where the questions will appear; the actual gameplay will take place on this page</h1>
     </header>
-<div></div>
+    <div id="question-stage"></div>
+
     
 </body>
 </html>
