--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuizMe 2.0</title>
     <link rel="stylesheet" href="./landing-page-style.css">
-    <script defer src="./app.js"></script>
+    <script defer src="./app.js" type="module"></script>
 
 </head>
 <body>
