--- a/questions.html
+++ b/questions.html
@@ -6,14 +6,21 @@
     <title>QuizMe 2.0</title>
     <link rel="stylesheet" href="./questions-style.css">
     <script defer src="./app.js"></script>
-    <script defer src="./data.js"></script>
 </head>
 <body>
     <header>
         <h1>This is where the questions will appear; the actual gameplay will take place on this page</h1>
     </header>
-    <div id="question-stage"></div>
+    <div id="question-stage">
+        <h2 id="questions"></h2>
+        <div id="answers">
+            <button class="answer"></button>
+            <button class="answer"></button>
+            <button class="answer"></button>
+            <button class="answer"></button>
+        </div>
 
-    
+    </div>
+
 </body>
 </html>
