Score tallying fixed

--- a/game.html
+++ b/game.html
@@ -26,7 +26,7 @@
                         Score
                     </p>
                     <h1 class="hud-main-text" id="score">
-                        
+                       0 
                     </h1>
                 </div>
             </div>
@@ -47,7 +47,7 @@
 
             <div class="choice-container">
                 <p class="choice-prefix">D</p>
-                <p class="choice-text" data-number="4">console.log('Hello World')</p>
+                <p class="choice-text" data-number="4">onsole.log('Hello World')</p>
             </div>
             </div>
 
