--- a/highscores.html
+++ b/highscores.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <div class="container">
-    <div id="highScores" class="flex-center flex-colimn">
+    <div id="highScores" class="flex-center flex-column">
         <h1 id="finalScore">LeaderBoard</h1>
         <ul id="highScoresList"></ul>
         <a href="/" class="btn">Go Home</a>
