Working on readMe

--- a/end.html
+++ b/end.html
@@ -11,7 +11,7 @@
         <div id="end" class="flex-center flex-colummn">
             <h1 id="finalScore">0</h1>
             <form class="end-form-container">
-                <h2 id="end-text">Enter your name below to save score!</h2>
+                <h2 id="end-text">Winner, winner chicken dinner. Enter your name below to save score!</h2>
                 <input type="text" name="name" id="username"
                 placeholder='Enter your name'>
                 <button class="btn" id="saveScoredBtn" type="submit"
