--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <body>
    <div class="container">
     <div id="home" class="flex-column flex-center">
-        <h1>TRIVIA GAME</h1>
+        <h1>A trivia game 1.0</h1>
         <a href="/game.html" class="btn">Play</a>
         <a href="/highscores.html" id="highscore-btn"
         class="btn">High Scores</a>
+        <h2>One wrong answer will create a losing condition. Make it to the end to win.</h2>
     </div>
+    
    </div> 
 </body>
 </html>
