--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/Style/style.css">
 </head>
 <body>
    <div class="container">
     <div id="home" class="flex-column flex-center">
         <h1>A trivia game 1.0</h1>
-        <a href="/game.html" class="btn">Play</a>
-        <a href="/highscores.html" id="highscore-btn"
+        <a href="/HTML/game.html" class="btn">Play</a>
+        <a href="/HTML/highscores.html" id="highscore-btn"
         class="btn">High Scores</a>
         <h2>One wrong answer will create a losing condition. Make it to the end to win.</h2>
     </div>
