--- a/pages/end.html
+++ b/pages/end.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/Style/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="container">
@@ -17,10 +17,10 @@
                 <button class="btn" id="saveScoredBtn" type="submit"
                 onClick="saveHighScore(event)" disabled>Save</button>
             </form>
-            <a href="/HTML/game.html" class="btn">Play Again</a>
+            <a href="/pages/game.html" class="btn">Play Again</a>
             <a href="/" class="btn">Go Home</a>
         </div>
     </div>
-    <script src="/Script/game.js"></script>
+    <script src="/js/game.js"></script>
 </body>
 </html>
