--- a/pages/game.html
+++ b/pages/game.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Page</title>
-    <link rel="stylesheet" href="/Style/style.css">
-    <link rel="stylesheet" href="/Style/game.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/game.css">
 </head>
 
 <body>
@@ -52,6 +52,6 @@
             </div>
 
     </div>
-    <script src="/Script/game.js"></script>
+    <script src="/js/game.js"></script>
 </body>
 </html>
