--- a/pages/highscores.html
+++ b/pages/highscores.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Scores</title>
-    <link rel="stylesheet" href="/Style/style.css">
-    <link rel="stylesheet" href="/Style/highscores.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/highscores.css">
 </head>
 <body>
    <div class="container">
@@ -15,6 +15,6 @@
         <a href="/" class="btn">Go Home</a>
     </div>
    </div> 
-   <script src="/Script/highscores.js"></script>
+   <script src="/js/highscores.js"></script>
 </body>
 </html>
